# distributed-storage

./: .dockerignore  .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 05a113d3e854_create_users_and_refresh_tokens_tables.py
app/: main.py
app/api/: router.py
app/core/: config.py  cookies.py  error_handlers.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/middleware/: correlation_id.py  logging.py  process_time.py  request_size.py  security_headers.py
app/models/: __init__.py  base.py  refresh_token.py  user.py
app/repositories/: refresh_token.py  user.py
app/schemas/: auth.py  common.py  user.py
app/scripts/: create_admin.py  seed_users.py
app/services/: auth.py  user.py
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  PRD.md
docs/adr/: 0001-record-architecture-decisions.md  0002-metadata-in-postgresql.md  0003-blob-store-minio-s3.md  0004-content-addressed-blob-layout.md  0005-whole-file-blobs.md  0006-refcounted-dedup.md  0007-dedicated-worker-arq-redis.md  0008-presigned-url-data-path.md  0009-react-spa-frontend.md  0010-async-upload-finalization.md  0011-separate-origins-cors.md  0012-httponly-cookie-session.md  README.md
docs/design/: auth-cookies.md  quota-search-admin.md  sharing.md  storage-model.md  trash-and-jobs.md  upload-download.md  (+1 more)
tests/: conftest.py  test_auth.py  test_auth_cookies.py  test_current_user.py  test_health.py  test_middleware.py  test_rbac.py  test_seed_users.py  test_users.py
(+8 files in other folders)
